spade-tests/src/snapshots/spade_tests__linear_check__destructuring_linear_type_requires_use_of_subtypes.snap
---
source: spade-tests/src/linear_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused resource
  ┌─ testinput:2:13
  │
2 │     let (x, y) = a;
  │             ^ y is unused
  │
  = note: y is a &mut value which must be set


